[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/examples/nine-patch-dialog/nine-patch-dialog/nine-patch-dialog.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/montreal/Montreal.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/montreal/Montreal-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/examples/nine-patch-dialog/assets/inventory-nine-patch-background.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 18
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = -2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 18
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = -2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 18
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="NinePatchDialog" type="Node2D"]
show_behind_parent = true
script = ExtResource( 1 )

[node name="BackgroundNinePatchRect" type="NinePatchRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 0
texture = ExtResource( 4 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="TextLabel" type="Label" parent="."]
margin_left = 9.0
margin_top = 9.0
margin_right = 34.0
margin_bottom = 177.0
custom_colors/font_color = Color( 0.701961, 0.701961, 0.701961, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Test Text"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptButton" type="Button" parent="."]
visible = false
margin_right = 100.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Accept"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="."]
visible = false
margin_right = 100.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 3 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkButton" type="Button" parent="."]
visible = false
margin_right = 100.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Ok"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="BackgroundNinePatchRect" to="." method="_on_BackgroundNinePatchRect_gui_input"]
[connection signal="pressed" from="AcceptButton" to="." method="_on_AcceptButton_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="OkButton" to="." method="_on_OkButton_pressed"]
